# databricks-model-serving

./: .coverage  .flake8  .gitignore  README.md  coverage.xml  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
.github/workflows/: ci.yml
notebooks/: 00_srti_client.py  01_train.py  02_serve.py  03_debug.py
src/databricks/: model_serving.py
src/databricks/model_serving/: client.py  endpoint.py
src/databricks_model_serving.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/databricks_srti/: endpoint.py
tests/: conftest.py  test_client.py  test_methods.py
