[project]
name =  "databricks-model-serving"
authors = [
    {name = "Rafael Pierre", email = "rafael.pierre@databricks.com"},
    {name = "Sepideh Ebrahimi", email = "sepideh.ebrahimi@databricks.com"},
]
description = "Python library for interacting with Databricks Serverless Realtime Inference endpoints."
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.7"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]
version = "0.0.1"

[project.optional-dependencies]
spark = [
    "pyspark>=3.0.0"
]
test = [
    "bandit[toml]==1.7.4",
    "black==22.1.0",
    "check-manifest==0.48",
    "ruff",
    "pre-commit==2.17.0",
    "pylint==2.12.2",
    "pylint_junit",
    "pytest-cov==3.0.0",
    "pytest-mock<3.7.1",
    "pytest-runner",
    "pytest==7.1.0",
    "pytest-github-actions-annotate-failures",
    "shellcheck-py==0.8.0.4"
]

[project.urls]
Documentation = "https://github.com/sebrahimi1988/databricks-srti-demo/README.md"
Source = "https://github.com/sebrahimi1988/databricks-srti-demo/"
Tracker = "https://github.com/sebrahimi1988/databricks-srti-demo/issues"


[tool.black]
line-length = 88
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
venv = "env37"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.7"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]